// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Horizontal bar configuration should generate variables with secondary axis 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
    {
      "ownerId": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Horizontal bar configuration should generate variables with single groupBy field 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Vertical bar configuration should generate variables with composite field 1`] = `
{
  "groupBy": [
    {
      "name": {
        "firstName": true,
      },
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Vertical bar configuration should generate variables with date field and granularity 1`] = `
{
  "groupBy": [
    {
      "createdAt": {
        "granularity": "MONTH",
      },
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Vertical bar configuration should generate variables with single groupBy field 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Bar Chart Configuration Vertical bar configuration should generate variables with two groupBy fields 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
    {
      "ownerId": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Line Chart Configuration should generate variables with composite field 1`] = `
{
  "groupBy": [
    {
      "name": {
        "firstName": true,
      },
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Line Chart Configuration should generate variables with date field and granularity 1`] = `
{
  "groupBy": [
    {
      "createdAt": {
        "granularity": "MONTH",
      },
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Line Chart Configuration should generate variables with secondary axis 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
    {
      "ownerId": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Line Chart Configuration should generate variables with single groupBy field 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
  ],
}
`;

exports[`generateGroupByQueryVariablesFromChartConfiguration Line Chart Configuration should generate variables with two groupBy fields (multi-series) 1`] = `
{
  "groupBy": [
    {
      "stage": true,
    },
    {
      "ownerId": true,
    },
  ],
}
`;
